--- a/css/style.css
+++ b/css/style.css
@@ -1149,6 +1149,7 @@ nav.main-menu {
 .padding_dd {
   padding: 0px 50px;
 }
+
 .carousel-control-next {
   display: none;
 }
@@ -1189,13 +1190,18 @@ nav.main-menu {
   display: inline-block;
   padding: 20px 30px;
 }
+.about .about-box .span {
+  color: rgb(100, 13, 13) !important;
+}
 .about .about-box p {
   font-size: 17px;
   line-height: 28px;
   color: #000;
   padding: 40px 0px;
 }
-
+.about .about-box .span {
+  color: rgb(100, 13, 13) !important;
+}
 .about .about-box a {
   font-size: 16px;
   border: #070905 solid 1px;
@@ -1330,7 +1336,7 @@ nav.main-menu {
 .clients_red {
   background: #fff;
   padding-bottom: 50px;
-  background: url(../images/dry\ fruits\ 8.jpeg);
+  background: url(../images/dry2.jpeg) !important;
   min-height: 978px;
   background-repeat: no-repeat;
   display: flex;
